--- a/functions/package.json
+++ b/functions/package.json
@@ -13,12 +13,15 @@
   "engines": {
     "node": "16"
   },
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
